--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </div>
 
                 <div class="text-center mt-5 mb-5">
-                    <a href="https://github.com/SEU_USUARIO/SEU_REPOSITORIO" target="_blank" class="btn btn-primary btn-lg">
+                    <a href="https://github.com/mutrillo/" target="_blank" class="btn btn-primary btn-lg">
                         Veja o código-fonte no GitHub
                     </a>
                 </div>
